<resources>
    <string name="app_name">PresentsLK</string>
    <string name="web_client_id">772246628734-q9ftb730kls9a28c3vv0l500uo8if6fd.apps.googleusercontent.com</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="search_hint">Search</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="about_us">About Us</string>
    <string name="presentslk">PresentsLK</string>
    <string name="contact_us">Contact us :</string>
    <string name="_94_70_179_4934">+94 70 179 4934</string>
    <string name="address">Address :</string>
    <string name="_351_d_pahala_imbulgoda_imbulgoda">351/D, Pahala Imbulgoda, Imbulgoda.</string>
    <string name="email">Email :</string>
    <string name="maduhansadilshan_gmail_com">maduhansadilshan@gmail.com</string>
    <string name="buy_all">Buy All</string>
    <string name="change_your_password">Change your Password</string>
    <string name="you_can_change_your_password_after_authenticating_your_profile_by_entering_your_current_password">You can change your password after authenticating your profile by entering your current password</string>
    <string name="current_password">Current Password*</string>
    <string name="enter_your_password">enter your password</string>
    <string name="authenticate">Authenticate</string>
    <string name="your_profile_is_not_authenticated_yet">Your profile is not authenticated yet!</string>
    <string name="new_password">New Password*</string>
    <string name="enter_your_new_password">enter your new password</string>
    <string name="confirm_new_password">Confirm New Password*</string>
    <string name="confirm_your_new_password">Confirm your new password</string>
    <string name="change_password">Change Password</string>
    <string name="price">Price</string>
    <string name="rs_1500_00">Rs. 1500.00/=</string>
    <string name="shipping">Shipping</string>
    <string name="rs_2500_00">Rs. 2500.00/=</string>
    <string name="total">Total</string>
    <string name="delete_your_profile">Delete your Profile</string>
    <string name="you_can_delete_your_profile_and_all_related_day_after_authenticating_your_profile_by_entering_your_current_password">You can delete your profile and all related day after authenticating your profile by entering your current password</string>
    <string name="password">Password*</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="please_enter_your_registered_email_to_receive_password_reset_link">Please enter your registered email to receive password reset link</string>
    <string name="enter_your_registered_email">enter your registered email</string>
    <string name="reset_password">Reset Password</string>
    <string name="search">Search</string>
    <string name="welcome">Welcome !</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="register">Register</string>
    <string name="click_here_to_reset">Click Here to Reset</string>
    <string name="welcome_to">Welcome To</string>
    <string name="presentslk_purchased_history">PresentsLK Purchased History</string>
    <string name="sign_up">Sign-up</string>
    <string name="full_name">Full Name*</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="date_of_birth_dd_mm_yyyy">Date of Birth (dd/mm/yyyy)*</string>
    <string name="select_your_date_of_birth">Select your Date of Birth</string>
    <string name="mobile">Mobile*</string>
    <string name="enter_your_mobile_no_without_94">Enter your mobile no. (without +94)</string>
    <string name="enter_your_home_address">Enter your home address</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="please_confirm_your_password">Please confirm your password</string>
    <string name="i_agree_with_the_terms_conditions_and_privacy_policy">I agree with the Terms, Conditions and Privacy Policy</string>
    <string name="sign_up_type">Sign-up Type</string>
    <string name="register_with_google">Register With Google</string>
    <string name="register_with_onetap">Register With Onetap</string>
    <string name="user_display_picture">User Display Picture</string>
    <string name="productpicture">productPicture</string>
    <string name="product_name">Product Name</string>
    <string name="loading">Loading</string>
    <string name="product_description">Product Description</string>
    <string name="dob">DOB</string>
    <string name="qty">Qty</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string name="buy_it_now">Buy It Now</string>
    <string name="v_1_0_0">V 1.0.0</string>
    <string name="update_your_profile">Update your profile</string>
    <string name="name">Name</string>
    <string name="update_profile">Update Profile</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="upload_your_profile_pic">Upload your profile pic</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="upload">Upload</string>
    <string name="register_user_since">Register User Since,</string>
    <string name="item_name">Item Name</string>
    <string name="price_0_00">Price: $0.00</string>
    <string name="remove">Remove</string>
    <string name="price_rs_0_0">Price : Rs. 0.0/=</string>
    <string name="enter_your_qty">Enter your Qty</string>
    <string name="qty_0">Qty: 0</string>
    <string name="shipping_rs_0_00">Shipping: Rs. 0.00</string>
    <string name="total_rs_0_00">Total: Rs. 0.00</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="status">Status</string>
    <string name="cancel_order">Cancel Order</string>
</resources>