<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_gray">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/border">

        <LinearLayout
            android:id="@+id/LL_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButtonProductImage_orders"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/white"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewProductName_orders"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/item_name"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewProductQty_orders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/qty_0" />

                <TextView
                    android:id="@+id/textViewProductPrice_orders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/price_rs_0_0" />

                <TextView
                    android:id="@+id/textViewProductShipping_orders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/shipping_rs_0_00" />

                <TextView
                    android:id="@+id/textViewProductTotal_orders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/total_rs_0_00" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_dateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LL_details"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDate_orders"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewTime_orders"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="@string/time" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_Status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LL_dateTime"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewStatus_orders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnCancelOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_order"
            android:layout_below="@id/LL_Status"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:backgroundTint="@color/red"/>

    </RelativeLayout>

</RelativeLayout>
