<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_gravity="center"
        android:background="@drawable/border"
        android:padding="15dp">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:adjustViewBounds="true"
            android:maxWidth="180dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textViewAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageViewLogo"
            android:text="@string/welcome_to"
            android:textAlignment="center"
            android:textSize="18sp"
             />

        <TextView
            android:id="@+id/textViewMainHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewAppName"
            android:layout_marginTop="10dp"
            android:text="@string/presentslk"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewMainHead"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/green"
            android:text="@string/login" />

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonLogin"
            android:layout_marginTop="30dp"
            android:text="@string/do_not_have_an_account"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textViewRegisterLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewRegister"
            android:text="@string/register"
            android:textColor="@color/purple_700"
            android:textAlignment="center" />

    </RelativeLayout>

</ScrollView>