<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_gray">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/border">

        <LinearLayout
            android:id="@+id/LL_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButtonProductImage_wishlist"
                android:layout_width="110dp"
                android:layout_height="130dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/white"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewProductName_wishlist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/item_name"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewProductQty_wishlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/qty_0" />

                <TextView
                    android:id="@+id/textViewProductPrice_wishlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/price_rs_0_0" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LL_details"
            android:padding="5dp"
            android:gravity="center">

            <Button
                android:id="@+id/buttonAddToCart_wishlist"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                android:drawableLeft="@drawable/ic_cart"
                android:drawableTint="@color/white"
                android:layout_marginRight="2dp"
                android:text="@string/add_to_cart" />

            <Button
                android:id="@+id/buttonRemoveFromWishlist"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink"
                android:drawableLeft="@drawable/ic_negative"
                android:drawableTint="@color/white"
                android:layout_marginLeft="2dp"
                android:text="@string/remove" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
